# OS_Labs

./: .gitattributes  .gitignore  CMakeLists.txt  fileSource3.txt
Laba 1/: main.c  task1.c  task1.h  task2.c  task2.h  task3.c  task3.h  task4.c  task4.h
Laba 2/: task1.c  task2.c
