cmake_minimum_required(VERSION 4.0)
project(Labs C)

set(CMAKE_C_STANDARD 23)

add_executable(Labs
        "Laba 1/main.c"
        "Laba 1/task1.c"
        "Laba 1/task1.h"
        "Laba 1/task3.c"
        "Laba 1/task3.h"
        "Laba 1/task2.h"
        "Laba 1/task2.c"
        "Laba 1/task4.c"
        "Laba 1/task4.h"
)
